--- a/styles.css
+++ b/styles.css
@@ -1534,6 +1534,15 @@ footer {
         }
       }
     }
+
+    .lang-theme-container {
+      .open ul {
+        display: block;
+        opacity: 1;
+        transform: translateY(0);
+        visibility: visible;
+      }
+    }
   }
 }
 
